<resources>
    <string name="app_name">Kyber Chat</string>
    <string name="app_name1">Kyber&#160;</string>
    <string name="app_name2">Chat</string>
    <string name="new_messages">New Messages</string>
    <string name="profile">My Profile</string>
    <string name="title_home">Chat</string>
    <string name="title_dashboard">Contacts</string>
    <string name="title_notifications">My Profile</string>
    <string name="connecting_to_vpn">Connecting to VPN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ob1Txt">Kyber Chat\nSecuring Your\nCommunications</string>
    <string name="ob2Txt">Secure\nDecentralised\nStrong Encryption</string>
    <string name="ob3Txt">Blockchain\nRedefining Trust\nTransparency</string>
    <string name="i_have_account">I have account</string>
    <string name="create_account">Create account</string>
    <string name="terms">By using this service, you agree to our\nTerms of Service and Privacy Policy</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="name">Enter your name</string>
    <string name="password_e_text">Enter your password</string>
    <string name="rec_password_e_text">Enter your recovery password</string>
    <string name="password_title_access">Access your account</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_complete">Continue</string>
    <string name="titleChoose">Choose Your Display Name</string>
    <string name="password">Password</string>
    <string name="password_s_title">Enter your recovery password to load your account. If you haven\'t saved it, you can find in your app settings.</string>
    <string name="subtitleChoose">It can be your real name, an alias, or anything else you like - and you can change it any time.</string>
    <string name="licence">Licence Key</string>
    <string name="edit_licence">Enter Licence Key</string>
    <string name="privacy_licence">Please use the web link to enter your license key
 in order to enhance your privacy</string>
    <string name="licence_e_text">Licence Key</string>
    <string name="rec_password">Recovery Password</string>
    <string name="search_contacts">Search name or ID</string>
    <string name="message">Message...</string>
    <string name="todo">TODO</string>
    <string name="delete_s_m">Delete selected message ?</string>
    <string name="cancel">Cancel</string>
    <string name="delete_for_me">Delete for me</string>
    <string name="delete_for_everyone">Delete for everyone</string>
    <string name="search">Search</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="allow">Allow 05b0… to send you a message and share your name and photo with them? They won\'t be notified that you\'ve seen their message until you accept.</string>
    <string name="unread">Unread</string>
    <string name="pin">Pin</string>
    <string name="mute">Mute</string>
    <string name="select">Select</string>
    <string name="archive">Archive</string>
    <string name="delete">Delete</string>
    <string name="play_voice_message">play voice message\n</string>
    <string name="all_media">All media</string>
    <string name="chat_settings">Chat Settings</string>
    <string name="delete_chat">Delete Chat</string>
    <string name="disappearing_messages">Disappearing Messages</string>
    <string name="block">Block</string>
    <string name="mute_notifications">Mute Notifications</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="free_things">Free Things</string>
    <string name="sample_link_1">https://www.instagram.com/community/file/1312921033225014799/160-free-tab-bar-</string>
    <string name="sample_link_2">https://www.instagram.com/community/file/1364368331565295794/speedy-chow-food</string>
    <string name="speedy_chow_food">Speedy Chow | Food</string>
    <string name="_100_free_search">100+ FREE Search Bar Component Types</string>
    <string name="_150_wizard">150+ Wizard</string>
    <string name="last_month">Last Month</string>
    <string name="save">Save</string>
    <string name="sounds_notifications"><![CDATA[Sounds & Notifications]]></string>
    <string name="report_spam_text">Kyber chat will be notified that this person may be sending spam. Kyber chat can\'t see the content of any chats.</string>
    <string name="report_block"><![CDATA[Report & Block]]></string>
    <string name="nick_sub_title">Nicknames and notes in Signal are stored with end-to-end encryption, ensuring they are only visible to you.</string>
    <string name="accound_id">059df9a8c376d310f54244a8700 793a6dd119033f69f73190f2ca 6d7edb92953a</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="id_sample">059df9a8c376d310f54244a8700793a6dd1190\n33f69f73190f2ca6d7edb92953a</string>
    <string name="invite_friend">Invite your friend to chat with you on Kyber Chat by sharing your Account ID with them.</string>
    <string name="create_group">Create Group</string>
    <string name="anderson">Anderson</string>
    <string name="nickname">Nickname</string>
    <string name="new_contact_sub">Please enter the Kyber Chat ID of the contact you would like to add</string>
    <string name="new_contact">New Contact</string>
    <string name="enter_your_id">Enter ID</string>
    <string name="hint_andersona_id">\@anderson</string>
    <string name="scan_id">Scan ID</string>
    <string name="add_new_contact">Invalid contact</string>
    <string name="add_new_contact_sub">Invalid Kyber Chat ID. Please check the ID and try again.</string>
    <string name="kyber">Kyber</string>
    <string name="chat">Chat</string>
    <string name="add_contact">Add Contact</string>
    <string name="theme">Theme</string>
    <string name="system_default">System Default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="block_anderson">Block Anderson?</string>
    <string name="blocked_sub">Blocked people won\'t be able to call you or send you messages.</string>
    <string name="john_doe">John Doe</string>
    <string name="hey_how_s_it_going">Hey! How\'s it going?</string>
    <string name="aslam">Aslam</string>
    <string name="a">A</string>
    <string name="delete_all_sub">This will permanently delete the all chat.</string>
    <string name="delete_all_chat">Delete all chat?</string>
    <string name="emojis">Emojis</string>
    <string name="recent_emojis">Recent Emojis</string>
    <string name="appearance">Appearance</string>
    <string name="your_account_id">Your Account ID</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="message_requests">Message Requests</string>
    <string name="_0">0</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="off">Off</string>
    <string name="shared_media">Shared media</string>
    <string name="_20">20</string>
    <string name="_2_groups_in_common">2 groups in common</string>
    <string name="add_to_agroup">Add to agroup</string>
    <string name="game">🎮Game🎮</string>
    <string name="working_people">Working people</string>
    <string name="report_spam">Report Spam</string>
    <string name="kevin">Kevin</string>
    <string name="david_taylor">David Taylor</string>
    <string name="mira_clara">Mira Clara</string>
    <string name="_1_weeks">1 weeks</string>
    <string name="_4_weeks">4 weeks</string>
    <string name="_1_day">1 day</string>
    <string name="_8_hours">8 hours</string>
    <string name="_1_hour">1 hour</string>
    <string name="_5_minutes">5 minutes</string>
    <string name="_30_seconds">30 seconds</string>
    <string name="_25_mb">25 MB</string>
    <string name="don_quixote">Don Quixote</string>
    <string name="mute_for_1_hour">Mute for 1 hour</string>
    <string name="mute_for_8_hour">Mute for 8 hour</string>
    <string name="mute_for_1_day">Mute for 1 day</string>
    <string name="mute_for_7_days">Mute for 7 days</string>
    <string name="always">Always</string>
</resources>