<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Chat.messages.allmedias.DisMsgFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backBtn_dis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                app:tint="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/disappearing_messages"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_18sp" />


        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="When enabled, new messages sent and received in this chat will disappear after they have been seen."
            android:layout_margin="10dp"
            android:fontFamily="@font/inter_regular"
            />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/off"
                android:fontFamily="@font/inter_medium"
                android:paddingLeft="10dp"
                android:buttonTint="@color/radio_button_color"/>

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_weeks"
                android:fontFamily="@font/inter_medium"
                android:paddingLeft="10dp"
                android:buttonTint="@color/radio_button_color"/>

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4_weeks"
                android:fontFamily="@font/inter_medium"
                android:paddingLeft="10dp"
                android:buttonTint="@color/radio_button_color"/>

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_day"
                android:fontFamily="@font/inter_medium"
                android:paddingLeft="10dp"
                android:buttonTint="@color/radio_button_color"/>

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8_hours"
                android:fontFamily="@font/inter_medium"
                android:paddingLeft="10dp"
                android:buttonTint="@color/radio_button_color"/>

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_hour"
                android:fontFamily="@font/inter_medium"
                android:paddingLeft="10dp"
                android:buttonTint="@color/radio_button_color"/>

            <RadioButton
                android:id="@+id/radioButton7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5_minutes"
                android:fontFamily="@font/inter_medium"
                android:paddingLeft="10dp"
                android:buttonTint="@color/radio_button_color"/>

            <RadioButton
                android:id="@+id/radioButton8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_30_seconds"
                android:fontFamily="@font/inter_medium"
                android:paddingLeft="10dp"
                android:buttonTint="@color/radio_button_color"/>

        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textAllCaps="false"
            android:fontFamily="@font/inter_medium"
            android:backgroundTint="@color/teal"
            android:layout_gravity="end"
            android:layout_marginEnd="40dp"/>



    </LinearLayout>

</FrameLayout>