<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Chat.messages.chatSettings.AppearnceFragment">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.accounts.LoginActivity"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backBtn_Appe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                android:background="@color/zxing_transparent"
                app:tint="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:text="@string/appearance"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_18sp"
                android:layout_marginStart="40dp"/>


        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textSize="@dimen/textSize_16sp"
                android:fontFamily="@font/inter_regular"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textSize="@dimen/textSize_14sp"
                android:fontFamily="@font/inter_r"
                android:textColor="@color/gray_800"/>

            <LinearLayout
                android:id="@+id/theme_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme"
                android:textSize="@dimen/textSize_16sp"
                android:fontFamily="@font/inter_regular"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/chooseTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light"
                android:textSize="@dimen/textSize_14sp"
                android:fontFamily="@font/inter_r"
                android:textColor="@color/gray_800"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>